# rust-micro-gui

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: buffer.rs  gui.rs  layer.rs  lib.rs  native.rs  prelude.rs  window.rs
src/core/: buffer.rs  layer.rs  mod.rs  window.rs
src/examples/: bw.rs  common.rs  rgb.rs
src/graphics/: mod.rs
src/native/: mod.rs
src/types/: buffer.rs  events.rs  mod.rs  pixel.rs  point.rs  rect.rs  renderable.rs
src/widgets/: demo.rs  mod.rs
