[package]
name = "micro-gui"
description = "A smol GUI for embedded systems"
repository = "https://github.com/ryankurte/rust-micro-gui"
version = "0.1.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
edition = "2018"

[features]
default = [ "sdl" ]
sdl = ["sdl2"]


[dependencies]


[dependencies.sdl2]
version = "0.30"
optional = true
default-features = false
features = ["image"]

[[bin]]
name = "micro-gui-example"
path = "src/bin/example.rs"
required-features = [ "sdl2" ]

