[package]
name = "micro-gui"
description = "A smol GUI for embedded systems"
repository = "https://github.com/ryankurte/rust-micro-gui"
version = "0.1.0"
authors = ["Ryan Kurte <ryankurte@gmail.com>"]
edition = "2018"
license = "MIT"

[features]
default = [ "sdl" ]
sdl = ["sdl2", "structopt", "quote"]


[dependencies]
structopt = { version = "0.2.15", optional = true }
quote = { version = "0.6.12", optional = true }
proc-macro2 = "0.4.27"


[dependencies.sdl2]
version = "0.30"
optional = true
default-features = false
features = ["image", "ttf"]


[[example]]
name = "rgb"
path = "src/examples/rgb.rs"
required-features = [ "sdl2" ]

[[example]]
name = "bw"
path = "src/examples/bw.rs"
required-features = [ "sdl2" ]
